--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   intl: ^0.16.1
   provider: ^4.1.2
   shared_preferences: ^0.5.7+3
+  pull_to_refresh: ^1.5.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
