--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ dependencies:
   html: ^0.14.0+3
   intl: ^0.16.1
   provider: ^4.1.2
-  shared_preferences: ^0.5.7+3
   pull_to_refresh: ^1.5.8
+  hive: ^1.4.1+1
+  hive_flutter: ^0.3.0+2
+  path_provider: ^1.6.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  hive_generator:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
