--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   hive_flutter: ^0.3.0+2
   path_provider: ^1.6.11
   auto_size_text: ^2.1.0
+  shimmer: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
