--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path_provider: ^1.6.11
   auto_size_text: ^2.1.0
   shimmer: ^1.1.1
+  bottom_navy_bar: ^5.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
