--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,16 +36,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_local_notifications: ^1.4.4+3
+  workmanager: ^0.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner:
-  hive_generator:
+  build_runner: null
+  hive_generator: null
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # The following line ensures that the Material Icons font is
