--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,15 +36,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_local_notifications: ^1.4.4+3
-  workmanager: ^0.2.3
   cached_network_image: ^2.3.2+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: null
-  hive_generator: null
+  build_runner: 
+  hive_generator: 
+  change_app_package_name:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
