--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@
 # Web related
 lib/generated_plugin_registrant.dart
 
+#size configuration settings
+lib/size_config.dart
+
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
