--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   pull_to_refresh: ^1.5.8
   share: ^0.6.4+3
   shimmer: ^1.1.1
+  flutter_device_type: ^0.3.2
 
 dev_dependencies:
   flutter_test:
