--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,27 +23,28 @@ dependencies:
   bottom_navy_bar: ^5.4.0
   cached_network_image: ^2.3.2+1
   cupertino_icons: ^0.1.2
+  flutter_device_type: ^0.3.2
   flutter_local_notifications: ^2.0.2
-  hive: ^1.4.1+1
-  hive_flutter: ^0.3.0+2
+  hive: ^2.0.2
+  hive_flutter: ^1.0.0
   html: ^0.14.0+3
   http: ^0.12.0+4
   intl: ^0.16.1
   launch_review: ^2.0.0
-  path_provider: ^1.6.11
-  provider: ^4.1.2
+  path_provider: ^2.0.1
+  provider: ^5.0.0
   pull_to_refresh: ^1.5.8
   share: ^0.6.4+3
+  shared_preferences: ^2.0.5
   shimmer: ^1.1.1
-  flutter_device_type: ^0.3.2
   toast: ^0.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 
-  change_app_package_name: 
-  hive_generator: 
+  build_runner: ^1.12.2
+  change_app_package_name: ^0.1.2
+  hive_generator: ^1.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
