--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: ^2.0.5
   shimmer: ^1.1.1
   toast: ^0.1.5
+  flutter_local_notifications: ^5.0.0+1
+  workmanager: ^0.2.3
 
 dev_dependencies:
   flutter_test:
