--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.4+5
+version: 0.13.5
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -21,28 +21,28 @@ dependencies:
     sdk: flutter
   auto_size_text_pk: ^3.0.0
   bottom_navy_bar: ^6.0.0
-  cached_network_image: ^3.1.0
-  cupertino_icons: ^1.0.3
+  cached_network_image: ^3.2.1
+  cupertino_icons: ^1.0.4
   flutter_device_type: ^0.4.0
-  hive: ^2.0.4
+  hive: ^2.2.1
   hive_flutter: ^1.1.0
   html: ^0.15.0
-  http: ^0.13.3
+  http: ^0.13.4
   intl: ^0.17.0
   launch_review: ^3.0.1
-  path_provider: ^2.0.2
-  provider: ^5.0.0
+  path_provider: ^2.0.10
+  provider: ^6.0.3
   share: ^2.0.4
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.0.15
   shimmer: ^2.0.0
-  fluttertoast: ^8.0.7
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.6
+  build_runner: ^2.1.11
   change_app_package_name: ^1.0.0
-  hive_generator: ^1.1.0
+  hive_generator: ^1.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
