--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   shared_preferences: ^2.0.15
   shimmer: ^2.0.0
   fluttertoast: ^8.0.9
+  flutter_screenutil: ^5.5.3+2
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +45,7 @@ dev_dependencies:
   build_runner: ^2.1.11
   change_app_package_name: ^1.0.0
   hive_generator: ^1.1.3
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
