--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.13.5
+version: 0.13.6
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -21,31 +21,31 @@ dependencies:
     sdk: flutter
   auto_size_text_pk: ^3.0.0
   bottom_navy_bar: ^6.0.0
-  cached_network_image: ^3.2.1
-  cupertino_icons: ^1.0.4
+  cached_network_image: ^3.2.3
+  cupertino_icons: ^1.0.5
   flutter_device_type: ^0.4.0
-  hive: ^2.2.1
+  hive: ^2.2.3
   hive_flutter: ^1.1.0
-  html: ^0.15.0
-  http: ^0.13.4
-  intl: ^0.17.0
+  html: ^0.15.4
+  http: ^1.1.0
+  intl: ^0.18.1
   launch_review: ^3.0.1
-  path_provider: ^2.0.10
-  provider: ^6.0.3
+  path_provider: ^2.0.15
+  provider: ^6.0.5
   share: ^2.0.4
-  shared_preferences: ^2.0.15
-  shimmer: ^2.0.0
-  fluttertoast: ^8.0.9
-  flutter_screenutil: ^5.5.3+2
+  shared_preferences: ^2.2.0
+  shimmer: ^3.0.0
+  fluttertoast: ^8.2.2
+  flutter_screenutil: ^5.8.4
   pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.1.11
-  change_app_package_name: ^1.0.0
-  hive_generator: ^1.1.3
-  flutter_lints: ^2.0.1
+  build_runner: ^2.4.6
+  change_app_package_name: ^1.1.0
+  hive_generator: ^2.0.0
+  flutter_lints: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,8 +57,10 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/logo/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
